Import of BYTEROCK/MooseX-AuthorizedMethodRoles-0.00.03 from CPAN.
gitpan-cpan-distribution: MooseX-AuthorizedMethodRoles
gitpan-cpan-version:      0.00.03
gitpan-cpan-path:         BYTEROCK/MooseX-AuthorizedMethodRoles-0.00.03.tar.gz
gitpan-cpan-author:       BYTEROCK
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,15 @@
 ---
-abstract: 'Syntax sugar for authorized methods by MooseX::Role '
+abstract: 'Syntax sugar for authorized methods by MooseX::Role'
 author:
-  - 'John Scoles <byterock@h...mail.come>'
+  - 'John Scoles <byterock@hotmail.com>'
 build_requires:
   Moose::Util: 0
   Test::Moose::More: 0
   Test::More: 0
   perl: 5.010
+  test_role1: 0
+  test_role2: 0
+  test_role3: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
@@ -25,4 +28,4 @@ requires:
   Sub::Name: 0
   strict: 0
   warnings: 0
-version: 0.00.02
+version: 0.00.03
