Import of BYTEROCK/MooseX-AuthorizedMethodRoles-0.00.05 from CPAN.
gitpan-cpan-distribution: MooseX-AuthorizedMethodRoles
gitpan-cpan-version:      0.00.05
gitpan-cpan-path:         BYTEROCK/MooseX-AuthorizedMethodRoles-0.00.05.tar.gz
gitpan-cpan-author:       BYTEROCK
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -1,14 +1,23 @@
 name = MooseX-AuthorizedMethodRoles
-version = 0.00.04
+version = 0.00.05
 author = John Scoles <byterock@hotmail.com>
 license = GPL_1
+
 [MinimumPerl]
+perl = 5.008008
+
 [GatherDir]
+
 [MetaYAML]
+
 [MetaProvides::Package]
 MooseX::Meta::Method::Role::Authorized = 1
+
 [MakeMaker]
+
 [Manifest]
+
 [AutoPrereqs]
+
 [PkgVersion]
 skip = test_role\d
